--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://mywebsite.com"
+base_url = "https://flimster.github.io/blog"
 
 # Site metadata
 title = "My Learning Journey"
